test/conformance/accept/title_header_redundant.hdoc
hdoc(version="2.0", lang="en", title="Header Title");

title { Header Title }

p "body"
