test/conformance/reject/hdoc_body_non_empty.hdoc
hdoc(version="2.0", lang="en") "not empty"
